# code_structure_independent_components

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/base/: abstract_api_collector.py  abstract_scraper.py
src/utils/: logging.py
